elastic-ip.tf
provider "aws" {
access_key = "AKIAYKAEDH6NXKPSTIPI"
secret_key = "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"
region = "us-east-2"
}

resource "aws_instance" "instance1" {
ami = "ami-020db2c14939a8efb"
instance_type = "t2.micro"
key_name = "munna"
tags = {
Name = "ec2-instance"
}
} resource "aws_eip" "elasticip" {
    instance = aws_instance.instance1.id
    vpc = true
    tags = {
        Name = "Elasticipaddress"
    }
}
